@@ -1,6 +1,6 @@
 # -*- encoding: utf-8 -*-
-
 from django.contrib.gis.db.models import GeoManager
+
 from .models import SearchManagerMixIn
 
 
