@@ -1,3 +1,1 @@
-# django>=1.7,<1.12
-psycopg2-binary>=2.7.5
-# six>=1.10.0
+psycopg2-binary
