@@ -2,7 +2,7 @@
 name = djorm-ext-pgfulltext
 author = Lovely Team
 author-email = engineering@livelovely.com
-summary = PostgreSQL Full Text Search integration with django orm.
+summary = PostgreSQL Full Text Search integration with Django ORM.
 license = BSD
 description-file = README.rst
 home-page = https://github.com/linuxlewis/djorm-ext-pgfulltext
@@ -24,6 +24,9 @@ classifier =
     "Programming Language :: Python :: 3.5",
     "Topic :: Software Development :: Libraries",
     "Topic :: Utilities",
+
+[files]
+packages = djorm_pgfulltext
 
 [build_sphinx]
 all_files = 1
