@@ -1,9 +1,3 @@
-from setuptools import find_packages
 from setuptools import setup
 
-
-setup(
-    packages=find_packages(),
-    pbr=True,
-    setup_requires=['pbr'],
-)
+setup(setup_requires=['pbr>=1.9', 'setuptools>=17.1'], pbr=True)
