@@ -16,7 +16,7 @@ setenv = PRB_VERSION = 0.9.4
 commands = py.test --basetemp={envtmpdir} {posargs}
 deps = pytest
        pytest-pythonpath
-       pytest-timeout
+       # pytest-timeout
 
        django17: Django>=1.7,<1.8
        django17: pytest-django<3.2
